# convertToWebP

./: .gitignore  LICENSE  README.md  VideoConverterGUI.py  WebWeaverKit.spec  convertToWebP-7-23-23.spec  convertToWebP.py  design.md  fileRenamer.py  imageConverter.py  imageManipulationGUI.py  index.html  package-lock.json  package.json  pdfToImage.py  pyinstallercmd.txt  requirements.txt  svgCircleGenerator.py  test_tools.py  textFormatter.py  theme.py
.github/workflows/: tauri-ci.yml
old versions/: convertToPython.py  convertToPython.spec  convertToPython2.py  convertToPython2.spec  convertToPython3.py  convertToPython3.spec  convertToPython4.py  convertToPython4.spec  convertToPython5.py  convertToPython5.spec  convertToPython6.py  convertToPython6.spec  convertToPython7.py  convertToPython7.spec
src/: App.tsx  test-setup.ts  themes.ts
src-tauri/: Cargo.toml  tauri.conf.json  tauri.macos.conf.json  tauri.windows.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
src/__tests__/: App.test.tsx  FileRenamer.test.tsx  ImageConverter.test.tsx  PillSelector.test.tsx  Section.test.tsx  SvgGenerator.test.tsx  VideoCompressor.test.tsx  VideoConverter.test.tsx  themes.test.ts  useSettings.test.ts
src/components/: ImageConverter.tsx  ImageCropper.tsx  PillSelector.tsx  Section.tsx  SvgGenerator.tsx  TextFormatter.tsx  VideoCompressor.tsx  VideoConverter.tsx
src/styles/: theme.css
tauri-app/: .gitignore  index.html  package-lock.json  package.json  vite.config.ts
tauri-app/src/: App.tsx  invoke.ts  test-setup.ts  useSettings.ts
tauri-app/src-tauri/: Cargo.toml  tauri.conf.json
tauri-app/src-tauri/capabilities/: default.json
tauri-app/src-tauri/src/: lib.rs
tauri-app/src/__tests__/: App.test.tsx  themes.test.ts  (+3 more)
(+4 files in other folders)
