[package]
name = "app"
version = "2.3.0"
description = "CipherLoom"
authors = ["Matthew Thomas Stevens Studios LLC"]
license = "MIT"
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.0", features = [] }
tauri-plugin-log = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
image = { version = "0.25", features = ["webp", "png", "jpeg", "gif", "bmp", "tiff", "ico"] }
color_quant = "1.1"
png = "0.17"
webp = "0.3"
regex = "1"
base64 = "0.22"
reqwest = { version = "0.12", features = ["json", "stream"] }
futures-util = "0.3"
dirs = "6"
